ingressController/tomcat-demo/tomcat-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myapp-ingress
  namespace: default
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              serviceName: tomcat
              servicePort: 8080
            path: /
